# Dendro-GR

./: .clang-format  .gitignore  CMakeLists.txt  Teuk.toml  bssnq1_BASELINE.par.toml  ccz4_eqns_configs.py  constraint_eqn.cpp  create_par_files.py  runall.sh  temporary_rhs_output.cpp
.github/workflows/: test_dendro_gr.yml
BSSN_GR/: CMakeLists.txt  run_scaling.sh
BSSN_GR/cuda/include/: bssnCtxGPU.cuh  bssn_kernels.cuh  test_utils.h
BSSN_GR/cuda/src/: bssnCtxGPU.cu  derivs_test.cu  gr_cuda.cu  gr_scaling.cu  rhs_test.cu
BSSN_GR/cuda_gr/include/: block_cu.h  rhs_cuda.cuh
BSSN_GR/cuda_gr/src/: derivs.cu  rhs_bssn1.cu  rhs_cuda.cu
BSSN_GR/include/: Linear_Teukolsky.h  bh.h  bssnCtx.h  bssnShellInterp.h  bssn_constraints.h  dataUtils.h  derivs.h  dsolveTimer.h  gr.h  grDef.h  grUtils.h  grUtils.tcc  parameters.h  profile_params.h  rhs.h  sommerfeld_bcs.h  timer.h
BSSN_GR/pars/: _prof.par.toml  fulldomain_noise_1em1.par.toml  fulldomain_noise_1em3.par.toml  fulldomain_noise_1em5.par.toml  kerr_M1_a0.4.par.toml  noise_amp_1e-1.par.toml  noise_amp_1e-3.par.toml  noise_amp_1e-5.par.toml  parity_kerr_a0p4.par.toml  parity_noise_1em1.par.toml  parity_noise_1em3.par.toml  parity_noise_1em5.par.toml  parity_schwarzschild.par.toml  q1.deeptest.par.toml  q1.par.toml  q1.tinytest.par.toml  q1.tinytest_blosc.par.toml  q1.tinytest_cheby.par.toml  q1.tinytest_cheby2.par.toml  q1.tinytest_zfp.par.toml  q1.tsrk.par.toml  q12.par.toml  q16.par.toml  q2.par.toml  q24.par.toml  q32.par.toml  q4.par.toml  q8.par.toml  schwarzschild_M1.par.toml
BSSN_GR/scripts/: bssnrhs_dealloc.h  bssnrhs_derivs.h  bssnrhs_derivs_adv.h  bssnrhs_derivs_mixed_only.h  bssnrhs_evar_derivs.h  bssnrhs_ko_derivs.h  bssnrhs_ko_derivs_newfilt.h  bssnrhs_memalloc.h  ccz4_physcon_aliases.h  ccz4_rhs_aliases.h  constraint_dealloc.h  constraint_derivs.h  constraint_memalloc.h
BSSN_GR/src/: Kerr.cpp  KerrNewman.cpp  Linear_Teukolsky.cpp  TPNewton.cpp  TwoPunctures.cpp  bssnCtx.cpp  bssn_cascade_avx512_fused_interior.inc.cpp  bssn_cascade_avx512_interior.inc.cpp  bssn_cascade_avx_fused_interior.inc.cpp  bssn_cascade_avx_interior.inc.cpp  bssn_cascade_ir_avx2_fused_interior.inc.cpp  bssn_cascade_ir_avx2_interior.inc.cpp  bssn_cascade_ir_avx512_fused_interior.inc.cpp  bssn_cascade_ir_avx512_interior.inc.cpp  bssn_eqns_SSL_HD.cpp  bssn_eqns_SSL_HDdxsq.inc.cpp  bssn_nuts.cpp  bssn_scaling_bench.cpp  bssneqs.cpp  bssneqs_CAHD_noSSL.inc.cpp  bssneqs_SSL_HD_dxsq.cpp  bssneqs_cascade.cpp  bssneqs_cascade_avx.cpp  bssneqs_cascade_avx512.cpp  bssneqs_cascade_avx512_fused.cpp  bssneqs_cascade_avx_fused.cpp  bssneqs_cascade_ir_avx.cpp  bssneqs_cascade_ir_avx_fused.cpp  bssneqs_eta_const_standard_gauge+.cpp  bssneqs_eta_const_standard_gauge.cpp  bssneqs_naive.cpp  bssngr_main.cpp  ccz4_rhs_eqns.cpp  checkDerivatives.cpp  dataUtils.cpp  derivs.cpp  dsolveTimer.cpp  eta_G.inc.cpp  eta_RIT.inc.cpp  eta_causal_fade.inc.cpp  (+22 more)
BSSN_GR/src/init_data_helpers/: Baumgarte.cpp  Bin_Kerr.cpp  Kerr.cpp  NLTeukolsky.init.cpp  SC_init.cpp  Teukolsky.init.cpp  schwarzschildInit.cpp
CodeGen/: EM_BSSN.py  Temp_vars.py  bssn.py  bssneqs_nx_cse_wo_derivs.cpp  bssneqs_sympy_cse_wo_derivs.cpp  constraints.py  constraints_v2.py  dendro.py  physcon.cpp  rhs.cpp  sph.c  test.cpp  test_bssneqs_CAHD.cpp
EM1/src/: em1_lts.cpp
EM2/src/: em2_lts.cpp
EM3/src/: em3_lts.cpp
EM4/src/: em4_lts.cpp
Fluid/include/: fluidMath.h  fluidUtils.tcc
Fluid/src/: fluidMath.cpp  rkfluid.cpp
NLSigma/: CMakeLists.txt
NLSigma/include/: nlsmCtx.h  rk4nlsm.h
NLSigma/src/: nlsm.cpp  nlsmCtx.cpp  nlsm_nuts.cpp  nlsm_spherical_interpolate.cpp  rk4nlsm.cpp
lib/BHaHAHA/: BHaHAHA.h  BHaH_defines.h  CMakeLists.txt  bah_diagnostics_area_centroid_and_Theta_norms.c  bah_interpolation_2d_general__uniform_src_grid.c  bah_numgrid__external_input_set_up.c  bah_rhs_eval.c  set_CodeParameters-nopointer.h  set_CodeParameters-simd.h  set_CodeParameters.h
parstest/: bssnq1_BLOSC_double_Level3.par.toml  bssnq1_BLOSC_double_Level6.par.toml  bssnq1_BLOSC_double_Level9.par.toml  bssnq1_BLOSC_float_Level3.par.toml  bssnq1_BLOSC_float_Level6.par.toml  bssnq1_BLOSC_float_Level9.par.toml  bssnq1_ZFP_double_accuracy0.par.toml  bssnq1_ZFP_double_accuracy1.par.toml  bssnq1_ZFP_double_accuracy2.par.toml  bssnq1_ZFP_double_accuracy3.par.toml  bssnq1_ZFP_double_precision4.par.toml  bssnq1_ZFP_double_precision5.par.toml  bssnq1_ZFP_double_precision6.par.toml  bssnq1_ZFP_double_precision7.par.toml  bssnq1_ZFP_double_precision8.par.toml  bssnq1_ZFP_float_accuracy0.par.toml  bssnq1_ZFP_float_accuracy1.par.toml  bssnq1_ZFP_float_accuracy2.par.toml  bssnq1_ZFP_float_accuracy3.par.toml  bssnq1_ZFP_float_precision4.par.toml  bssnq1_ZFP_float_precision5.par.toml  bssnq1_ZFP_float_precision6.par.toml  bssnq1_ZFP_float_precision7.par.toml  bssnq1_ZFP_float_precision8.par.toml
profile_e2e/: q1.profile.4node.par.toml  q1.profile.par.toml  q1.verify.par.toml  run_profile.sh  run_profile.slurm
scripts/: PORTING.md
scripts/hybrid_scaling/: .gitignore  HANDOFF.md  README.md  q1.scaling.par.toml  q8.scaling.par.toml  run_hybrid_scaling.sh  run_imbalance_sweep.sh  verify_bitexact.sh
temp_RUN/: modify_par_file_for_options.py  q1.par.toml  run_bssn_stuff.sh
